[package]
name = "spikenaut-hybrid"
version = "0.1.0"
edition = "2024"
description = "Neuromorphic-ANN hybrid framework: Event-driven Spikenaut SNN frontend + Open MoE LLM (OLMoE) backend. Optimized for telemetry, crypto mining, and HFT data streams."
repository = "https://github.com/Spikenaut/spikenaut-hybrid"
license = "GPL-3.0-or-later"
keywords = ["neuromorphic", "snn", "llm", "moe", "hybrid", "spiking"]
categories = ["science", "algorithms"]
readme = "README.md"
exclude = ["docs/"]

[lib]
name = "spikenaut_hybrid"
path = "src/lib.rs"

# ── Spikenaut ecosystem crates ─────────────────────────────────────────────────
[dependencies]
spikenaut-telemetry = { workspace = true }
spikenaut-encoder   = { workspace = true }
neuromod            = { workspace = true }
spikenaut-spine     = { workspace = true }

# ── Serialisation / Utility ────────────────────────────────────────────────────
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

# ── Optional: safetensors loading (pure Rust, no Candle) ───────────────────────
safetensors = { version = "0.4", optional = true }

[dev-dependencies]
# examples only — no extra overhead in the lib
serde_json = { workspace = true }

# ── Feature flags ──────────────────────────────────────────────────────────────
[features]
default     = []
## Enable safetensors BF16 model loading (falls back to stub when disabled).
safetensors = ["dep:safetensors"]
## Enable GGUF Q5_K_M model loading (pure Rust parser, no C++ libs required).
gguf        = []
## Enable ZMQ spine transport for Rust ↔ Julia training bridge.
spine-zmq   = ["spikenaut-spine/zmq"]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
