[package]
name = "hybrid-fusion"
version = "0.2.0"
edition = "2024"
description = "Pure-Rust orchestrator: cortex-tensor transformer + engram-parser GGUF loader + neuromod spiking dynamics. Zero Candle, zero GPU, zero Julia dependencies."
repository = "https://github.com/Limen-Neural/hybrid-fusion"
license = "GPL-3.0-or-later"
keywords = ["neuromorphic", "snn", "llm", "transformer", "hybrid"]
categories = ["science", "algorithms"]
readme = "README.md"
exclude = ["docs/"]

[lib]
name = "hybrid_fusion"
path = "src/lib.rs"

# ── Core pure-Rust stack ──────────────────────────────────────────────────────
[dependencies]
cortex-tensor = { path = "../cortex-tensor" }
engram-parser = { path = "../engram-parser" }
neuromod      = { version = "0.4.0", path = "../Limen-Neural/neuromod" }

# ── Serialisation / Utility ────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1

[workspace]
# Standalone: detach from any parent Cargo workspace (mirrors cortex-tensor).
